[package]
name = "md_match_derive"
version = "0.1.0"
edition = "2021"
authors = ["Mu00 <mu001999@outlook.com>"]
license = "MIT"
repository = "https://github.com/Mu001999/md-match"
description = """
This crate provides the derive macro for md-match.
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
